@@ -2,10 +2,12 @@ package com.beanspot.backend.security;
 
 import com.beanspot.backend.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -34,6 +36,7 @@ public class UserPrincipal implements UserDetails, OAuth2User {
                         .userId(user.getUserId())
                         .phone(user.getPhone())
                         .socialId(user.getSocialId())
+                        .role(user.getRole())
                         .build()
         );
     }
@@ -50,7 +53,9 @@ public class UserPrincipal implements UserDetails, OAuth2User {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(
+                new SimpleGrantedAuthority("ROLE_" + user.getRole().name())
+        );
     }
 
     @Override
